# ShapeAwareHumanRetargeting_IJCV_2021

./: README.md  index.html
data/8-views/: person.txt  smpl_consensus_shape.pkl
data/8-views/smpl_pose/: GOPR95340000000046_IUV.png_body.pkl  GOPR95340000000067_IUV.png_body.pkl  GOPR95340000000081_IUV.png_body.pkl  GOPR95340000000094_IUV.png_body.pkl  GOPR95340000000115_IUV.png_body.pkl  GOPR95340000000130_IUV.png_body.pkl  GOPR95340000000144_IUV.png_body.pkl
data/box/: restrictions-2D.pkl
data/box/smpl_pose/: GOPR95420000000000.jpg_body.pkl  GOPR95420000000001.jpg_body.pkl  GOPR95420000000002.jpg_body.pkl  GOPR95420000000003.jpg_body.pkl  GOPR95420000000004.jpg_body.pkl  GOPR95420000000005.jpg_body.pkl  GOPR95420000000006.jpg_body.pkl  GOPR95420000000007.jpg_body.pkl  GOPR95420000000008.jpg_body.pkl  GOPR95420000000009.jpg_body.pkl  GOPR95420000000010.jpg_body.pkl  GOPR95420000000011.jpg_body.pkl  GOPR95420000000012.jpg_body.pkl  GOPR95420000000013.jpg_body.pkl  GOPR95420000000014.jpg_body.pkl  GOPR95420000000015.jpg_body.pkl  GOPR95420000000016.jpg_body.pkl  GOPR95420000000017.jpg_body.pkl  GOPR95420000000018.jpg_body.pkl  GOPR95420000000019.jpg_body.pkl  GOPR95420000000020.jpg_body.pkl  GOPR95420000000021.jpg_body.pkl  GOPR95420000000022.jpg_body.pkl  GOPR95420000000023.jpg_body.pkl  GOPR95420000000024.jpg_body.pkl  GOPR95420000000025.jpg_body.pkl  GOPR95420000000026.jpg_body.pkl  GOPR95420000000027.jpg_body.pkl  GOPR95420000000028.jpg_body.pkl  GOPR95420000000029.jpg_body.pkl  GOPR95420000000030.jpg_body.pkl  GOPR95420000000031.jpg_body.pkl  GOPR95420000000032.jpg_body.pkl  GOPR95420000000033.jpg_body.pkl  GOPR95420000000034.jpg_body.pkl  GOPR95420000000035.jpg_body.pkl  GOPR95420000000036.jpg_body.pkl  GOPR95420000000037.jpg_body.pkl  GOPR95420000000038.jpg_body.pkl  GOPR95420000000039.jpg_body.pkl  (+133 more)
model-deformation-render/: README.md  config.py  inpaint.py  render2_pose.py  requirements.txt  requirements_inpainting.txt  run_inpaint.sh  vd-render.py
model-deformation-render/deformation/: CMakeLists.txt  README.md  deformation.cpp  deformation.h  deformation.i
model-deformation-render/docker/: Dockerfile
model-deformation-render/models/: map_partes_14.txt
model-deformation-render/models/3D/: read.md
model-deformation-render/normal/: CMakeLists.txt  README.md  compute_normals.cpp  compute_normals.h  compute_normals.i
model-deformation-render/singularity/: render.def
model-deformation-render/src/: draw.py  feather_blending.py  seg_label.py  visibility_match.py
model-deformation-render/tex/: GOPR95340000000000_IUV.png_body.pkl  test.txt  tex.py
model-deformation-render/up_tools/: camera.py  mesh.py  model.py~
retargeting/: README.md  motion_reconstruction.py  requirements.txt  retargeting.py
retargeting/docker/: Dockerfile
retargeting/models/: README.md
retargeting/singularity/: retargeting.def
retargeting/src/: config.py  motion_tools.py  retargeting_tools.py
retargeting/src/tf_smpl/: batch_lbs.py  batch_smpl.py  dense_map.npy  dense_texture.npy
retargeting/src/util/: MuVs_util.py  renderer.py
